[project]
name = "pythonbmp"
description = "A pure Python 2D/3D graphics library that outputs to windows bitmap format"
version = "1.0.2"
authors = [
    { name = "Joel Alcarez", email = "joelalcarez1975@gmail.com" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
requires-python = ">=3.8"
license = {file = "LICENSE"}
readme = "README.md"

[project.urls]
homepage = "https://github.com/TechnoTanuki/Python_BMP"
documentation = "https://github.com/TechnoTanuki/Python_BMP/blob/main/docs/Hello_Graphics.md"
repository = "https://github.com/TechnoTanuki/Python_BMP"
"Bug Tracker" = "https://github.com/TechnoTanuki/Python_BMP/issues"

[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]  # PEP 508 specifications.

[tool.setuptools]
package-dir = {"" = "pythonbmp"}